# GameEngine_2D_2026

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ToDoList.md  build.sh
cmake/: glm.cmake  imgui.cmake  libraries.cmake  lua.cmake  sdl2.cmake  sdl2_image.cmake  sdl2_mixer.cmake  sdl2_ttf.cmake  sol2.cmake
src/: Main.cpp
src/Game/: Game.cpp  Game.hpp
